compiler/tests/ar/errors/pure_impure_call.salam
// لغة: العربية
// توقع: E012
دالة طابع(x : صحيح) : صحيح:
    اطبع(x)
    أرجع x
نهاية

نقي دالة ضعف(x : صحيح) : صحيح:
    أرجع طابع(x) * 2
نهاية

دالة الرئيسية:
    اطبع(ضعف(3))
نهاية
